--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@types/classnames": "^2.3.4",
+    "@types/jest": "^30.0.0",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
     "babel-loader": "^9.1.3",
     "babel-preset-react-app": "^10.0.1",
+    "classnames": "^2.5.1",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
@@ -22,6 +28,9 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
+    "jsdom": "^26.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "portfinder": "^1.0.32",
     "postcss-loader": "^7.3.3",
@@ -39,6 +48,7 @@
   },
   "scripts": {
     "start": "npm run dev",
+    "test": "jest",
     "dev": "cross-env NODE_ENV=development webpack serve --config ./config/webpack.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.js"
   },
