--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@storybook/addon-docs": "^9.1.5",
+    "@storybook/addon-onboarding": "^9.1.5",
+    "@storybook/addon-styling-webpack": "^2.0.0",
+    "@storybook/addon-webpack5-compiler-swc": "^4.0.1",
+    "@storybook/react-webpack5": "^9.1.5",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -26,6 +31,7 @@
     "css-minimizer-webpack-plugin": "^5.0.1",
     "eslint-config-app": "^1.0.6",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-storybook": "^9.1.5",
     "eslint-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^30.1.3",
@@ -38,6 +44,7 @@
     "react-refresh": "^0.14.0",
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
+    "storybook": "^9.1.5",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
     "typescript": "^5.1.6",
@@ -50,7 +57,9 @@
     "start": "npm run dev",
     "test": "jest",
     "dev": "cross-env NODE_ENV=development webpack serve --config ./config/webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.js"
+    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.js",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "repository": {
     "type": "git",
